test/expected/cli/regex_error_caret.out
shit: 1:11: error: The regular expression '(' is invalid.
     1 |  [[ abc =~ ( ]]
       |            ^~ here.
note: The pattern must be a valid extended regular expression.
